# capstan

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
capstan/: __init__.py  cli.py
docs/: CURRENT-STATUS-2026-07-09.md  READY-TO-GO-2026-07-09.md  model-lifecycle.md  promotion-receipts.md
examples/: deepseek-v4-flash-ssd.example.toml  llama-cpp.example.toml  mlx-lm.example.toml
experiments/hy3-mlx-canary/cpp/: CMakeLists.txt  README.md  hy3_expert_bank.cpp  hy3_expert_bank.h  hy3_expert_cache_test.cpp  hy3_q4_affine.cpp  hy3_q4_affine.h  hy3_q4_affine_test.cpp  hy3_route_mlp_daemon.cpp  hy3_route_mlp_daemon_smoke.py  hy3_routed_mlp.cpp  hy3_routed_mlp.h  hy3_sidecar_io.cpp
experiments/hy3-mlx-canary/cpp/fixtures/: hy3-layer1-top5-bos.json
experiments/hy3-mlx-canary/cpp/results/: 20260707-route-batched-sgemm-spike.json  20260707-route-daemon-online.json  20260707-sidecar-io.json  20260708-hybrid-q4-dense-prefill16-route-exec.json  20260708-hybrid-q4-dense-prefill16-route-exec.time  20260708-hybrid-q4-dense-prefill4-route-exec.json  20260708-hybrid-q4-dense-prefill4-route-exec.time  20260708-hybrid-q4-dense-six-fixtures.json  20260708-hybrid-q4-direct-prefill16-route-exec.json  20260708-hybrid-q4-direct-prefill16-route-exec.time  20260708-hybrid-q4-direct-prefill4-route-exec.json  20260708-hybrid-q4-direct-prefill4-route-exec.time  20260708-hybrid-q4-direct-six-fixtures.json  20260708-hybrid-q4-hybrid-prefill16-route-exec.json  20260708-hybrid-q4-hybrid-prefill16-route-exec.time  20260708-hybrid-q4-hybrid-prefill4-route-exec.json  20260708-hybrid-q4-hybrid-prefill4-route-exec.time  20260708-hybrid-q4-hybrid-six-fixtures.json  20260708-hybrid-q4-summary.json
modelctl/: __init__.py  bench_artifacts.py  cli.py  fleet.py  http.py  ingest.py  init.py  intake.py  lifecycle.py  manifest.py  mlx.py  ops.py  promote.py  receipt.py  registry.py  report.py  report_store.py  runner.py  service.py  system.py
(+107 files in other folders)
